--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -99,6 +99,12 @@
    url = "https://man7.org/linux/man-pages/man1/perf.1.html"
 }
 
+@online{ManPerfSyscall,
+   author = "Linux",
+   title = "perf_event_open(2) — Linux manual page",
+   url = "https://man7.org/linux/man-pages/man2/perf_event_open.2.html"
+}
+
 @online{SeL4DocsThreads,
    author = "sel4.systems",
    title = "Threads",
@@ -223,6 +229,18 @@
    author = "seL4",
    title = "sel4bench",
    url = "https://github.com/seL4/sel4bench/README.md"
+}
+
+@online{GithubPerfFileFormat,
+   author = "linux",
+   title = "perf.data format",
+   url = "https://github.com/torvalds/linux/blob/master/tools/perf/Documentation/perf.data-file-format.txt"
+}
+
+@online{CERN_openlab_perf_file_format,
+   author = "Urs Fassler",
+   title = "perf file format",
+   url = "https://openlab-mu-internal.web.cern.ch/03_Documents/3_Technical_Documents/Technical_Reports/2011/Urs_Fassler_report.pdf"
 }
 
 @online{github_libsel4bench_sel4bench_header,
