--- a/thesis-a/report/report-a.tex
+++ b/thesis-a/report/report-a.tex
@@ -48,8 +48,8 @@
 \include{abbreviations}
 
 \tableofcontents
-\listoffigures  % if required
-\listoftables  % if required
+%\listoffigures  % if required
+%\listoftables  % if required
 
 %% pages in the ``mainmatter'' section have arabic page numbers and chapters are numbered
 \mainmatter
@@ -57,9 +57,10 @@
 \include{introduction}
 \include{background}
 \include{relatedwork}
-\include{mywork}
-\include{evaluation}
-\include{conclusion}
+\include{approach}
+\include{plan}
+%\include{evaluation}
+%\include{conclusion}
 
 %% chapters in the ``backmatter'' section do not have chapter numbering
 %% text in the ``backmatter'' is single spaced
