--- a/thesis-a/report/plan.tex
+++ b/thesis-a/report/plan.tex
@@ -1,3 +1,4 @@
 \chapter{Plan}\label{ch:plan}
 
-[TODO: Tie in the approach into this chapter]
+[TODO: Add stages section]
+[TODO: Add timeline section]
