--- a/thesis-a/report/introduction.tex
+++ b/thesis-a/report/introduction.tex
@@ -8,11 +8,11 @@ theses requirements while appearing in layout and structure as a thesis
 
 In the context of seL4, because most of the system services do not reside in the kernel, but instead are hoisted into user-space, it is critical that seL4 developers have sufficient tooling such that they can diagnose performance issues. (Could talk about the fact that there is limited support for profiling in the kernel, and so it is no use to developers in user-space)
 
-Chapter~\ref{ch:background} explains the background for this document.
-Chapter~\ref{ch:style} states the style and submission related requirements
-to theses submitted at the school.
-Chapter~\ref{ch:content} explains content related requirements to theses.
-Chapter~\ref{ch:eval} evaluates the thesis requirements template.  Finally,
-Chapter~\ref{ch:conclusion} draws up conclusions and suggest ways to
-further improve the thesis requirements template.
+%Chapter~\ref{ch:background} explains the background for this document.
+%Chapter~\ref{ch:style} states the style and submission related requirements
+%to theses submitted at the school.
+%Chapter~\ref{ch:content} explains content related requirements to theses.
+%Chapter~\ref{ch:eval} evaluates the thesis requirements template.  Finally,
+%Chapter~\ref{ch:conclusion} draws up conclusions and suggest ways to
+%further improve the thesis requirements template.
 
