--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -267,6 +267,18 @@
    url = "https://www.embedded.com/the-two-percent-solution",
 }
 
+@online{SiteAboutSeL4,
+   author = "seL4",
+   title = "About seL4",
+   url = "https://sel4.systems/About/"
+}
+
+@online{AOSMicrokernelSlide,
+   author = "Germot Heiser",
+   title = "Microkernels: Reducing the Trusted Computing Base",
+   url = "https://www.cse.unsw.edu.au/~cs9242/20/lectures/01a-intro.pdf"
+}
+
 %% Not yet citated
 %% http://www.emerson.emory.edu/services/gcc/html/Extended_Asm.html
 %% https://pittrasg.github.io/blog/2020/pmusarm/
